Better support for some applets that are in a menu bar
https://bugzilla.gnome.org/show_bug.cgi?id=643026

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1138,6 +1138,7 @@ TerminalScreen {
 
 PanelWidget,
 PanelApplet,
+PanelApplet > GtkMenuBar.menubar,
 PanelAppletFrame,
 PanelMenuBar.menubar,
 PanelToplevel {
