Better style for fallback tasklist and pager
https://bugzilla.gnome.org/show_bug.cgi?id=643034

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1183,3 +1183,9 @@ PanelApplet.GtkToggleButton:hover:active {
 NaTrayApplet {
     -NaTrayApplet-icon-padding: 6;
 }
+
+WnckPager, WnckTasklist {
+    background-color: @chrome_bg_color;
+    background-image: none;
+    color: @chrome_fg_color;
+}
