--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -39,6 +39,8 @@
 
 @define-color os_chrome_bg_color black;
 @define-color os_chrome_fg_color #ccc;
+@define-color os_chrome_selected_bg_color #666;
+@define-color os_chrome_selected_fg_color white;
 
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
