--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -2,19 +2,19 @@
 
 /* FIXME: I made up most of these colors, need proper design */
 @define-color theme_base_color #000000;
-@define-color theme_text_color #d3d7cf;
-@define-color theme_bg_color #383a36;
-@define-color theme_fg_color #d3d7cf;
+@define-color theme_text_color #d1cbc9;
+@define-color theme_bg_color #121212;
+@define-color theme_fg_color #d1cbc9;
 @define-color theme_selected_bg_color #c8d6e6;
 @define-color theme_selected_fg_color #000000;
 
 @define-color theme_tooltip_bg_color #cbcbcb;
 @define-color theme_tooltip_fg_color #000000;
 
-@define-color button_gradient_color_a #0a0c0a;
-@define-color button_gradient_color_b #252825;
-@define-color button_border #505450;
-@define-color button_active_gradient_color #495649;
+@define-color button_gradient_color_a #0d0b0d;
+@define-color button_gradient_color_b #282528;
+@define-color button_border #585458;
+@define-color button_active_gradient_color #5d565d;
 
 @define-color insensitive_bg_color #0b0b0d;
 @define-color insensitive_fg_color #585458;
@@ -37,9 +37,25 @@
 
 @define-color focused_entry_border #cadaeb;
 
+@define-color toolbar_gradient_base #1a1a1d;
+@define-color toolbar_gradient_step1 #262628;
+@define-color toolbar_gradient_step2 #43434b;
+@define-color toolbar_gradient_final #858597;
+
+@define-color toolbar_active_button_color #6f6f7e;
+
+@define-color menu_controls_color #aaa8ac;
+
+@define-color keyboard_focus_border_a #d5e2f0;
+@define-color keyboard_focus_border_b #aebdd1;
+
+@define-color trough_bg_color_a #333338;
+@define-color trough_bg_color_b #1b1b1e;
+
+@define-color frame_color #756a7f;
+
 /* FIXME: needs dark colors from here */
 @define-color link_color #4a90d9;
-@define-color frame_color #8a9580;
 @define-color warning_color #f57900;
 @define-color error_color #cc0000;
 @define-color success_color #4e9a06;
@@ -53,9 +69,6 @@
 @define-color error_fg_color rgb (166, 38, 38);
 @define-color error_bg_color rgb (237, 54, 54);
 
-@define-color keyboard_focus_border_a #a2c9f1;
-@define-color keyboard_focus_border_b #6794cf;
-
 @define-color os_chrome_bg_color black;
 @define-color os_chrome_fg_color #ccc;
 @define-color os_chrome_selected_bg_color #333;
@@ -64,23 +77,10 @@
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
 
-@define-color trough_bg_color_a #ccccc7;
-@define-color trough_bg_color_b #e4e4e1;
-
 @define-color active_switch_bg_color_a #509ae7;
 @define-color active_switch_bg_color_b #84b8ee;
 
 @define-color scale_fill_a #2c85e2;
 @define-color scale_fill_b #b8d6f5;
-
-@define-color menu_fg_color #2e87e3;
-@define-color menu_controls_color #555753;
-
-@define-color toolbar_gradient_base #aaaa9e;
-@define-color toolbar_gradient_step1 #bcbcb4;
-@define-color toolbar_gradient_step2 #d9d9d7;
-@define-color toolbar_gradient_final #e5e5e2;
-
-@define-color toolbar_active_button_color #909081;
 
 @import url ("gtk-widgets.css");
