dark: tweak button gradients for dark theme
Make them more consistent with the light theme.

--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -11,10 +11,15 @@
 @define-color theme_tooltip_bg_color #cbcbcb;
 @define-color theme_tooltip_fg_color #000000;
 
-@define-color button_gradient_color_a #0d0b0d;
-@define-color button_gradient_color_b #282528;
+@define-color button_gradient_color_a #282528;
+@define-color button_gradient_color_b #0d0b0d;
 @define-color button_border #585458;
-@define-color button_active_gradient_color #5d565d;
+
+@define-color button_active_gradient_color_a shade (@button_active_gradient_color_b, 0.83);
+@define-color button_active_gradient_color_b #5d565d;
+
+@define-color button_hover_gradient_color_a shade (@button_gradient_color_a, 1.07);
+@define-color button_hover_gradient_color_b @theme_base_color;
 
 @define-color insensitive_bg_color #0b0b0d;
 @define-color insensitive_fg_color #585458;
