adwaita: fix raised buttons gradients after last changes

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -805,8 +805,8 @@ GtkComboBox.button {
     border-color: @button_border;
     background-image: -gtk-gradient (linear,
 				     left top, left bottom,
-				     from (@theme_base_color),
-				     to (shade (@button_gradient_color_a, 0.94)));
+				     from (@button_hover_gradient_color_a),
+				     to (@button_hover_gradient_color_b));
     border-width: 1;
     border-style: solid;
 }
@@ -815,8 +815,8 @@ GtkComboBox.button {
 .primary-toolbar.toolbar.raised.button:active {
     background-image: -gtk-gradient (linear,
     				     left top, left bottom,
-                                     from (@button_active_gradient_color),
-				     to (alpha (shade (@button_active_gradient_color, 0.83), 0.13)));
+                                     from (@button_active_gradient_color_a),
+				     to (alpha (@button_active_gradient_color_b, 0.13)));
     background-color: @theme_base_color;
 
     border-color: @highlighted_border;
