Make fonts in the fallback panel boldface
A bit more consistent with gnome-shell

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1148,6 +1148,11 @@ PanelToplevel {
     color: @os_chrome_fg_color;
 }
 
+ClockBox,
+.gnome-panel-menu-bar {
+    font: bold;
+}
+
 PanelApplet > GtkMenuBar.menubar.menuitem:prelight,
 .gnome-panel-menu-bar.menuitem:prelight {
     background-color: @os_chrome_selected_bg_color;
