Theme the gnome session fail whale dialog

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1195,3 +1195,10 @@ WnckPager, WnckTasklist {
     background-image: none;
     color: @os_chrome_fg_color;
 }
+
+GsmFailWhaleDialog,
+GsmFailWhaleDialog * {
+    background-color: @os_chrome_bg_color;
+    background-image: none;
+    color: @os_chrome_fg_color;
+}
