--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1127,7 +1127,7 @@ CheeseThumbView /* Cheese */
 
 /* gnome-terminal */
 TerminalScreen {
-    background-color: @theme_bg_color;
+    background-color: @theme_base_color;
     color: @theme_fg_color;
     -TerminalScreen-background-darkness: 0.95;
 }
