--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -1,22 +1,21 @@
 /* dark colormap */
 
-/* FIXME: I made up most of these colors, need proper design */
-@define-color theme_base_color #000000;
-@define-color theme_text_color #d1cbc9;
-@define-color theme_bg_color #121212;
-@define-color theme_fg_color #d1cbc9;
-@define-color theme_selected_bg_color alpha (@theme_fg_color, 0.70);
-@define-color theme_selected_fg_color #000000;
+@define-color theme_base_color #333333;
+@define-color theme_text_color #ddddde;
+@define-color theme_bg_color #222222;
+@define-color theme_fg_color @theme_text_color;
+@define-color theme_selected_bg_color #f57900;
+@define-color theme_selected_fg_color #ffffff;
 
-@define-color theme_tooltip_bg_color #cbcbcb;
-@define-color theme_tooltip_fg_color #000000;
+@define-color theme_tooltip_bg_color #000000;
+@define-color theme_tooltip_fg_color #eeeeee;
 
-@define-color button_gradient_color_a #282528;
-@define-color button_gradient_color_b #0d0b0d;
-@define-color button_border #383438;
+@define-color button_gradient_color_a #363636;
+@define-color button_gradient_color_b #222222;
+@define-color button_border #111111;
 
-@define-color button_active_gradient_color_a shade (@button_active_gradient_color_b, 0.83);
-@define-color button_active_gradient_color_b #5d565d;
+@define-color button_active_gradient_color_a #000000;
+@define-color button_active_gradient_color_b shade (@button_active_gradient_color_a, 0.93);
 
 @define-color button_hover_gradient_color_a shade (@button_gradient_color_a, 1.07);
 @define-color button_hover_gradient_color_b @theme_base_color;
@@ -26,43 +25,46 @@
 
 @define-color inactive_frame_color shade (@theme_bg_color, 1.19);
 
-@define-color notebook_border #393939;
-@define-color notebook_active_tab_border alpha (@theme_base_color, 0.50);
-@define-color notebook_selected_tab_color alpha (@theme_fg_color, 0.75);
+@define-color notebook_border #111111;
+@define-color notebook_active_tab_border alpha (@theme_selected_bg_color, 1.0);
+@define-color notebook_selected_tab_color alpha (@theme_selected_bg_color, 0.75);
 
-@define-color notebook_tab_gradient_a @switch_slider_color;
-@define-color notebook_tab_gradient_b @theme_base_color;
+@define-color notebook_tab_gradient_a shade (@button_gradient_color_a, 0.8);
+@define-color notebook_tab_gradient_b shade (@button_gradient_color_b, 0.8);
 
 @define-color switch_slider_color #111113;
 @define-color switch_slider_border #a5b8cc;
 
-@define-color highlighted_border #757075;
+@define-color highlighted_border @button_border;
 @define-color internal_element_color #77757a;
 
 @define-color progressbar_background_a alpha (@theme_fg_color, 0.70);
 @define-color progressbar_background_b alpha (@theme_fg_color, 0.45);
 @define-color progressbar_border alpha (@theme_fg_color, 0.60);
 
-@define-color focused_entry_border alpha (@theme_fg_color, 0.95);
+@define-color focused_entry_border @theme_selected_bg_color;
 
-@define-color toolbar_gradient_base #1a1a1d;
-@define-color toolbar_gradient_step1 #262628;
-@define-color toolbar_gradient_step2 #43434b;
-@define-color toolbar_gradient_final #555561;
+@define-color toolbar_gradient_base #080808;
+@define-color toolbar_gradient_step1 #0a0a0a;
+@define-color toolbar_gradient_step2 #111111;
+@define-color toolbar_gradient_final #151515;
 
-@define-color toolbar_active_button_color #6f6f7e;
+@define-color toolbar_active_button_color #222222;
 
 @define-color expander_row_selected_color alpha (@theme_base_color, 0.60);
 
 @define-color menu_controls_color #aaa8ac;
 
-@define-color keyboard_focus_border_a alpha (@theme_fg_color, 0.80);
-@define-color keyboard_focus_border_b alpha (@theme_fg_color, 0.60);
+@define-color keyboard_focus_border_a alpha (@theme_fg_color, 0.30);
+@define-color keyboard_focus_border_b alpha (@theme_fg_color, 0.10);
 
-@define-color trough_bg_color_a #1b1b1e;
-@define-color trough_bg_color_b #333338;
+@define-color trough_bg_color_a #000000;
+@define-color trough_bg_color_b #111111;
 
 @define-color frame_color #756a7f;
+
+@define-color active_switch_bg_color_a shade (@theme_selected_bg_color, 0.85);
+@define-color active_switch_bg_color_b @theme_selected_bg_color;
 
 /* FIXME: needs dark colors from here */
 @define-color link_color #4a90d9;
@@ -87,10 +89,8 @@
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
 
-@define-color active_switch_bg_color_a #509ae7;
-@define-color active_switch_bg_color_b #84b8ee;
-
 @define-color scale_fill_a #2c85e2;
 @define-color scale_fill_b #b8d6f5;
 
-@import url ("gtk-widgets.css");
+@import url("gtk-widgets-assets-dark.css");
+@import url("gtk-widgets.css");
