tray icon: add icon-size property
This lets us fix tray icons at a specific size: 16x16.

Bug #645232

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1122,6 +1122,7 @@ PanelApplet GtkToggleButton:prelight {
 
 NaTrayApplet {
     -NaTrayApplet-icon-padding: 12;
+    -NaTrayApplet-icon-size: 16;
 }
 
 WnckPager, WnckTasklist {
