adwaita: don't propagate an 1px separator width to the whole toolbar
Instead, set a match rule on GtkSeparatorToolItem, which is what we
actuallly want to theme.

This fixes e.g. GtkComboboxes showing separators when on primary
toolbars, as described in https://bugzilla.gnome.org/show_bug.cgi?id=646194

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -635,8 +635,6 @@ GtkComboBox.button {
 
     -GtkWidget-window-dragging: true;
     -GtkToolbar-button-relief: 0;
-    -GtkWidget-separator-width: 1;
-    -GtkWidget-wide-separators: 1;
 }
 
 .primary-toolbar.toolbar:insensitive {
@@ -713,7 +711,10 @@ GtkComboBox.button {
     -adwaita-border-gradient: none;
 }
 
-.primary-toolbar.toolbar.separator {
+.primary-toolbar.toolbar GtkSeparatorToolItem {
+    -GtkWidget-wide-separators: 1;
+    -GtkWidget-separator-width: 1;
+
     border-style: solid;
     border-width: 1;
     border-color: shade (@theme_bg_color, 0.56);
