--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -7,6 +7,9 @@
 @define-color theme_selected_bg_color #f57900;
 @define-color theme_selected_fg_color #ffffff;
 
+@define-color menu_bg_color shade (@theme_bg_color, 0.4);
+@define-color menu_fg_color #ffffff;
+
 @define-color theme_tooltip_bg_color #000000;
 @define-color theme_tooltip_fg_color #eeeeee;
 
