--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -18,6 +18,9 @@
 @define-color theme_selected_bg_color @selected_bg_color;
 @define-color theme_selected_fg_color @selected_fg_color;
 
+@define-color menu_bg_color shade (@theme_bg_color, 0.45);
+@define-color menu_fg_color #ffffff;
+
 @define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
 @define-color inactive_frame_color #c7ccc1;
