--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -20,6 +20,7 @@
 
 @define-color menu_bg_color shade (@theme_bg_color, 0.45);
 @define-color menu_fg_color #ffffff;
+@define-color menu_controls_color #aaaaaa;
 
 @define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
@@ -78,8 +79,6 @@
 
 @define-color scale_fill_a #2c85e2;
 @define-color scale_fill_b #b8d6f5;
-
-@define-color menu_controls_color #555753;
 
 @define-color highlighted_border #8a8f8a;
 @define-color internal_element_color #888a85;
