--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -553,6 +553,7 @@ GtkComboBox.button {
 .menuitem:insensitive {
     /* there is some weird alpha precomposing issues with this - ghosts on dark background */
     color: mix (@menu_fg_color, @menu_bg_color, 0.8);
+    background-color: shade (@menu_bg_color, 1.10);
 }
 
 .menuitem {
