The padding fix by Sean went a litle too far for regular app toolbars. Avoid using hardcoded colors.
- used @bg_color #ededed instead of #eaeaea
- we should special case nautilus pathbar to make it more compact

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -651,7 +651,7 @@ GtkComboBox .button:prelight {
     border-radius: 0;
     border-style: none;
 
-    padding: 0;
+    padding: 2;
 
     -GtkWidget-window-dragging: true;
     -GtkToolbar-button-relief: 0;
@@ -911,7 +911,7 @@ GtkIconView.view.cell:selected:focused {
 }
 
 .view {
-    background-color: #eaeaea;
+    background-color: @theme_bg_color;
     color: @theme_fg_color;
     border-radius: 0;
     border-width: 3;
