turns out it was the wrong selector, the intent was to style the sidebar.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -911,7 +911,7 @@ GtkIconView.view.cell:selected:focused {
 }
 
 .view {
-    background-color: @theme_bg_color;
+    background-color: shade (@theme_base_color, 0.96);
     color: @theme_fg_color;
     border-radius: 0;
     border-width: 3;
@@ -1068,7 +1068,7 @@ GtkCalendar.highlight {
 
 .sidebar,
 .sidebar.view {
-    background-color: shade (@theme_base_color, 0.95);
+    background-color: shade (@theme_bg_color, 0.99);
 }
 
 ApDocView, /* Abiword */
