--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -911,7 +911,7 @@ GtkIconView.view.cell:selected:focused {
 }
 
 .view {
-    background-color: shade (@theme_base_color, 0.96);
+    background-color: @theme_base_color;
     color: @theme_fg_color;
     border-radius: 0;
     border-width: 3;
