--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -98,14 +98,14 @@
 }
 
 .pane-separator {
-    background-color: @theme_bg_color;
+    border-style: none;
+    border-width: 0;
     color: shade (@inactive_frame_color, 0.80);
 }
 
 .pane-separator:prelight,
 .pane-separator:selected {
-    background-color: @theme_bg_color;
-    border-color: shade (@highlighted_border, 0.964);
+    color: shade (@inactive_frame_color, 0.60);
 }
 
 /****************
