switch: make the inactive GtkSwitch label color darker
https://bugzilla.gnome.org/show_bug.cgi?id=645922

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -820,7 +820,7 @@ GtkSwitch {
 }
 
 GtkSwitch.trough {
-    color: @internal_element_color;
+    color: shade (@internal_element_color, 0.60);
     border-radius: 1;
     border-width: 1;
     border-style: solid;
