--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -46,6 +46,7 @@
 @define-color progressbar_border alpha (@theme_fg_color, 0.60);
 
 @define-color focused_entry_border @theme_selected_bg_color;
+@define-color focused_entry_inset alpha (@theme_selected_bg_color, 0.50);
 
 @define-color toolbar_gradient_base #080808;
 @define-color toolbar_gradient_step1 #0a0a0a;
@@ -92,8 +93,9 @@
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
 
-@define-color scale_fill_a #2c85e2;
-@define-color scale_fill_b #b8d6f5;
+@define-color scale_fill #2c85e2;
+@define-color scale_border_a #1864b2;
+@define-color scale_border_b #3e90e5;
 
 @import url("gtk-widgets-assets-dark.css");
 @import url("gtk-widgets.css");
