--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -50,6 +50,7 @@
 @define-color chrome_fg_color #fff;
 
 @define-color focused_entry_border #579eea;
+@define-color focused_entry_inset alpha (#d7e4f1, 0.50);
 
 @define-color button_gradient_color_a #f4f6f4;
 @define-color button_gradient_color_b #d7dad7;
@@ -77,8 +78,8 @@
 @define-color progressbar_background_b #1f72c6;
 @define-color progressbar_border #3277bf;
 
-@define-color scale_fill_a #2c85e2;
-@define-color scale_fill_b #b8d6f5;
+@define-color scale_fill #2c85e2;
+@define-color scale_border #1864b2;
 
 @define-color highlighted_border #8a8f8a;
 @define-color internal_element_color #888a85;
