--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -79,6 +79,7 @@
 *:insensitive {
     background-color: @insensitive_bg_color;
     color: @insensitive_fg_color;
+    border-color: shade (@internal_element_color, 1.37);
 }
 
 *:active {
@@ -169,18 +170,18 @@
 /*****************
  * GtkSpinButton *
  *****************/
+.spinbutton {
+    padding: 3 2;
+}
+
 .spinbutton.button,
-.spinbutton.button:insensitive,
 .spinbutton.button:prelight,
 .spinbutton.button:active {
+    color: @internal_element_color;
     background-image: none;
     background-color: @theme_base_color;
     border-width: 1;
     border-style: none;
-}
-
-.spinbutton {
-    padding: 3 2;
 }
 
 /****************
