--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -25,6 +25,7 @@
 
 @define-color insensitive_bg_color #0b0b0d;
 @define-color insensitive_fg_color #585458;
+@define-color insensitive_border_color shade (@internal_element_color, 0.70);
 
 @define-color inactive_frame_color shade (@theme_bg_color, 1.19);
 
@@ -70,6 +71,10 @@
 @define-color active_switch_bg_color_a shade (@theme_selected_bg_color, 0.85);
 @define-color active_switch_bg_color_b @theme_selected_bg_color;
 
+@define-color scale_fill shade (@insensitive_border_color, 0.90);
+@define-color scale_border_a shade (@internal_element_color, 0.90);
+@define-color scale_border_b shade (@internal_element_color, 0.65);
+
 /* FIXME: needs dark colors from here */
 @define-color link_color #4a90d9;
 @define-color warning_color #f57900;
@@ -93,9 +98,9 @@
 @define-color chrome_bg_color #1e1a17;
 @define-color chrome_fg_color #fff;
 
-@define-color scale_fill #2c85e2;
-@define-color scale_border_a #1864b2;
-@define-color scale_border_b #3e90e5;
+@define-color scale_progress_fill #2c85e2;
+@define-color scale_progress_border #1864b2;
+@define-color scale_progress_border_b #3e90e5;
 
 @import url("gtk-widgets-assets-dark.css");
 @import url("gtk-widgets.css");
