--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -79,7 +79,7 @@
 *:insensitive {
     background-color: @insensitive_bg_color;
     color: @insensitive_fg_color;
-    border-color: shade (@internal_element_color, 1.37);
+    border-color: @insensitive_border_color;
 }
 
 *:active {
@@ -276,9 +276,9 @@ GtkScale.trough {
 
     -adwaita-border-gradient: -gtk-gradient (linear,
                                              left top, left bottom,
-                                             from (@internal_element_color),
-                                             to (shade (@internal_element_color, 1.25)));
-    background-color: shade (@internal_element_color, 1.37);
+                                             from (@scale_border_a),
+                                             to (@scale_border_b));
+    background-color: @scale_fill;
 }
 
 GtkScale.trough.horizontal {
@@ -298,7 +298,7 @@ GtkScale.trough:insensitive {
 }
 
 GtkScale.progressbar {
-    background-color: @scale_fill;
+    background-color: @scale_progress_fill;
 
     border-width: 1;
     border-radius: 3;
@@ -306,8 +306,8 @@ GtkScale.progressbar {
 
     -adwaita-border-gradient: -gtk-gradient (linear,
                                              left top, left bottom,
-                                             from (@scale_border_a),
-                                             to (@scale_border_b));    
+                                             from (@scale_progress_border_a),
+                                             to (@scale_progress_border_b));    
 }
 
 GtkScale.mark {
